--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.js -e js,hbs"
+    "dev": "nodemon api/index.js -e js,hbs"
   },
   "author": "",
   "license": "ISC",
