--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node": "18.x"
   },
   "scripts": {
+    "build": "node build --output public",
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon api/index.js -e js,hbs"
